--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
+    "socket.io-client": "^4.4.1",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "vuejs-avataaars": "^4.0.1",
     "vuetify": "^2.6.1",
-    "webpack": "^4.46.0"
+    "webpack": "^4.46.0",
+    "xterm": "^4.17.0",
+    "xterm-addon-fit": "^0.5.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.16.3",
