--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
   "dependencies": {
     "@nuxtjs/auth-next": "5.0.0-1643791578.532b3d6",
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/composition-api": "^0.32.0",
+    "@pinia/nuxt": "^0.1.9",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
+    "pinia": "^2.0.14",
     "socket.io-client": "^4.4.1",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
